<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#E3F2FD">

    <TextView
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/abc_text_size_large_material"
        android:textColor="#000"
        android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/button_streamer"
                android:text="@string/button_streamer"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:id="@+id/button_scores"
                android:text="@string/button_scores"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:id="@+id/button_library"
                android:text="@string/button_library"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:id="@+id/button_build"
                android:text="@string/button_build"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:id="@+id/button_xyz"
                android:text="@string/button_xyz"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:id="@+id/button_own_app"
                android:text="@string/button_own_app"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="#FF1565C0"/>
        </LinearLayout>
</FrameLayout>
